Revision history for MooseX-Getopt

{{$NEXT}}

0.70      2016-05-10 20:32:32Z
 - In 0.69, an undefined init_arg would cause warnings and exception.
   Attributes with an undefined init_arg are now ignored. (thanks, Greg
   Oschwald! -- PR #7)

0.69      2016-04-22 11:27:12Z
 - attributes' "init_arg" settings are now respected when retrieving command
   line options (thanks, Olaf Alders! -- PR#6)

0.68      2015-03-04 18:16:30Z
 - fix tests that look for the wrong prereqs (0.67)

0.67      2015-02-28 04:37:19Z
 - remove argv from passed-through buildargs if no argv attribute exists, to
   mollify MooseX::StrictConstructor (RT#101938, Jose Luis Martinez)

0.66      2015-01-28 02:05:54Z
 - fix tests for formatting changes in Getopt::Long::Descriptive 0.099
   (RT#101724)

0.65      2014-08-06 06:09:04Z
 - re-release to remove README.pod from shipped dist

0.64      2014-08-02 17:35:20Z
 - bump required version of Getopt::Long::Descriptive to avoid an infinite
   loop problem (thanks, Bram!)

0.63      2014-03-25 16:37:58Z
 - fix test prereq on Test::Warnings (thanks, omega!)

0.62      2014-03-07 05:44:01Z
 - fix test that assumes option parsing is case-insensitive, which is no
   longer true with Getopt::Long::Descriptive 0.097

0.61      2014-02-11 06:30:14Z
 - fix potentially-broken check-breaks test when a conflicting module fails to
   compile

0.60      2014-02-10 02:21:05Z
 - avoid failing an optional test when YAML is not installed

0.59      2013-11-30 19:02:01Z
 - re-release to fix compile test

0.58      2013-09-13 16:57:41Z
 - remove use of deprecated $Config::Any::YAML::NO_YAML_XS_WARNING in tests
 - warnings tests bypassed during installation
 - author metadata moved to contributors

0.57      2013-09-07 21:29:05Z
 - spelling fixes (RT#87780, David Steinbrunner)
 - removed use of deprecated Class::MOP::load_class
 - repository migrated from shadowcat to the github moose organization

0.56      2013-02-15 21:13:18Z